--- a/src/less/isupportjolla.less
+++ b/src/less/isupportjolla.less
@@ -76,6 +76,8 @@ body {
         // #region Notice
 
         & > div[data-isupportjolla-component="notice"]{
+            .notice(false); // Set notice to use mixin but not full width
+            width: e("calc(100% - 10px)"); // Compensate for border-radius by reducing width
             text-indent: -10px; // Negative text-indent to compensate for border-left
             background-color: #f5f5f5;
             border-left: 10px solid @secondary;
@@ -104,7 +106,7 @@ body {
 
         & h2 { // Header level-2
             .headerStyle(2, 1.4);
-            margin: 1.5% 0 1.5% 0; // 1.5% margin on top and bottom
+            margin: 1.5% 0 5% 0; // 1.5% margin on top and 5% margin on bottom
         }
 
         // #endregion
@@ -115,7 +117,7 @@ body {
             & > div[data-isupportjolla-component="sailor-feed"],
             & > div[data-isupportjolla-component="sailfish-os"]{
                 .fullWidth;
-                margin-bottom: 2.5%;
+                margin-bottom: 5%;
 
                 div[data-isupportjolla-component="sailor-feed-timeline"]{ // Timeline Widget
                     .fullWidth;
@@ -146,10 +148,10 @@ body {
 
     // #endregion
 
-    // #region Notices and Footer
+    // #region Footer
 
-    div[data-isupportjolla-component="notice"], footer {
-        .notice;
+    & > footer {
+        .notice(true); // Set footer to full width
     }
 
     // #endregion
